--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
     "bun-types": "^1.3.5",
+    "dotenv": "^17.2.3",
     "typescript": "^5.7.2",
     "wrangler": "^4.58.0"
   }
