--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bun-types": "^1.3.5",
     "dotenv": "^17.2.3",
     "typescript": "^5.7.2",
+    "vitest": "^4.0.17",
     "wrangler": "^4.58.0"
   }
 }
