--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
+    "@vitest/coverage-v8": "^4.0.17",
     "bun-types": "^1.3.5",
     "dotenv": "^17.2.3",
     "typescript": "^5.7.2",
