--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run tests/api.test.ts",
-    "test:api": "vitest run tests/api.test.ts",
-    "test:ratelimit": "vitest run tests/ratelimit.test.ts",
-    "test:full": "vitest run",
+    "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage"
