--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitest/coverage-v8": "^4.0.17",
     "bun-types": "^1.3.5",
     "dotenv": "^17.2.3",
+    "lefthook": "^2.0.15",
     "typescript": "^5.7.2",
     "vitest": "^4.0.17",
     "wrangler": "^4.58.0"
